Fixed "makes it jump to the top of the page"

--- a/src/app/mail/mail.component.scss
+++ b/src/app/mail/mail.component.scss
@@ -1211,10 +1211,12 @@
     }
   }
   @include media("<sm") {
-    .fancy-field-group{
-      position: absolute;
-      top: 18px;
-      left: 15px;
+    &.show-on-mobile{
+      .fancy-field-group{
+        position: absolute;
+        top: 18px;
+        left: 15px;
+      }
     }
     .mail-from-name{
       position: relative;
